--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "node-deploy-app",
+  "name": "deploy-app",
   "version": "1.0.0",
   "description": "A simple user blog app",
   "main": "index.js",
   "scripts": {
-    "debug": "nodemon app.js",
-    "dev": "node app.js",
+    "debug": "nodemon -r dotenv/config app.js",
+    "dev": "node -r dotenv/config app.js",
     "start": "node app.js"
   },
   "keywords": [],
@@ -20,15 +20,19 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
+    "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
     "express-handlebars": "^4.0.0",
-    "express-session": "^1.17.0",
+    "express-session": "^1.18.0",
     "express-validator": "^6.4.0",
     "handlebars": "^4.7.3",
+    "hbs": "^4.2.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.9.6"
+    "mongodb": "^6.8.0",
+    "mongoose": "^5.13.22"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "nodemon": "^2.0.2"
   },
   "directories": {
