--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "12.x"
+    "node": "20.14.0"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
